# moat

./: .coverage  .envrc  .gitignore  .pypirc  404.html  AI_TEST_SYSTEM.md  CHANGELOG.md  CHANGELOG_v0.2.0.md  CHANGELOG_v1.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_BRIDGE.md  CONTRIBUTING.md  COVERAGE_75_PLAN.md  DX_IMPROVEMENTS.md  EVOLUTION_COMPLETE.md  EVOLUTION_ROADMAP.md  LICENSE  Makefile  PHASE1_COMPLETE.md  PHASE2_CONTRACT_TESTING_COMPLETE.md  PROJECT_SUMMARY.md  PYPI_PUBLISH_GUIDE.md  PYPI_RELEASE_v0.8.0a0.md  README.en.md  README.md  README.zh.md  RELEASE.md  RELEASE_NOTES_V061.md  RELEASE_V061_SUMMARY.md  SECURITY.md  SESSION_SUMMARY_V050_V060.md  UPGRADE_REPORT_v0.8.0-alpha.md  UPGRADE_SUMMARY.md  V030_SUMMARY.md  V070_BETA1_SUMMARY.md  ai_test_config.yml  architect.yml  coverage.json  demo_karpathy_principles.py  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  moat-pr-check.yml  moat.yml
EVOLUTION_METRICS/: index.html
EVOLUTION_METRICS_GUIDE/: index.html
GEMINI_INSIGHT_IMPLEMENTATION/: index.html
GEMINI_RECOMMENDATIONS_IMPLEMENTED/: index.html
HANDOVER_PONYTAIL/: index.html
INSTALLATION/: index.html
PYPI_PUBLISHING/: index.html
READY_FOR_USE/: index.html
ROADMAP_v0.3.0/: index.html
SOCIAL_PREVIEW/: index.html
V0.3.0_COMPLETE/: index.html
bugfix/moat-diff-keyerror-2026-07-12/: index.html
docs/: EVOLUTION_METRICS.md  EVOLUTION_METRICS_GUIDE.md  GEMINI_INSIGHT_IMPLEMENTATION.md  GEMINI_RECOMMENDATIONS_IMPLEMENTED.md  HANDOVER_PONYTAIL.md  INSTALLATION.md  OPTIMIZATION_PLAN.md  PYPI_PUBLISHING.md  READY_FOR_USE.md  ROADMAP_v0.3.0.md  SOCIAL_PREVIEW.md  V0.3.0_COMPLETE.md  demo-bug-intercept.sh  demo-scan-ai.sh  index.md  moat_v1_upgrade_plan.md  optimization_rules.md  performance_test_report.md  quickstart.md  security-detection-guide.en.md  security-detection-guide.md  usage.md  v1.0_test_report.md  v108_development_plan.md  开源宣传稿.md
docs/archive/: ARCHITECTURE_REORGANIZATION_COMPLETE.md  AST_TEST_COMPLETE.md  BACKUP_SUMMARY.md  COMMIT_SUMMARY_v1.1.2.md  COVERAGE_OPTIMIZATION_REPORT.md  DEEP_EVOLUTION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KARPATHY_PRINCIPLES.md  LOW_COVERAGE_TEST_COMPLETE.md  MOAT_ARCHITECTURE_REORGANIZATION.md  POSITIONING_UPDATE.md  README.en.md  RELEASE.md  RELEASE_TEST_REPORT_v0.6.1.md  RELEASE_v0.9.0.md  SESSION_COVERAGE_60_PERCENT.md  SESSION_SUMMARY.md  SETUP.md  SIDECAR_BUGFIX_REPORT.md  TEST_OPTIMIZATION_COMPLETE.md  TEST_REPORT_V060.md  THREE_PILLARS_COMPLETE.md  USAGE.md  V050_UPGRADE_COMPLETE.md  V070_BETA1_COMPLETE.md  V070_IMPROVEMENT_PLAN.md  V070_IMPROVEMENT_PLAN_REVISED.md
docs/bugfix/: moat-diff-keyerror-2026-07-12.md
docs/fixes/: MOAT_IMMUNE_THINKING_BLOCK_FIX.md
docs/guides/: MOAT_OPTIMIZATION_FROM_ONE.md  MOAT_OPTIMIZATION_IMPLEMENTATION_PLAN.md
docs/releases/: v1.1.2.md
fixes/MOAT_IMMUNE_THINKING_BLOCK_FIX/: index.html
guides/MOAT_OPTIMIZATION_FROM_ONE/: index.html
guides/MOAT_OPTIMIZATION_IMPLEMENTATION_PLAN/: index.html
moat/: __init__.py  __main__.py  architecture_report.py  audit.py  baseline.py  baseline.py.backup  cache.py  cache_enhanced.py  ci_generator.py  cli.py  config_enhanced.py  contract.py  core_areas.py  discovery.py  discovery.py.bak  evolution.py  evolution_cli.py  evolution_metrics.py  fix_strategies.py  fixer.py  monitor.py  notifier.py  report.py  report_enhanced.py  runner.py  version_check.py
moat/adapters/: __init__.py
moat/ai_test/: cli.py
moat/ast/: __init__.py  builder.py  diff.py  diff_enhanced.py  injector.py  tree_sitter.py
moat/checks/: __init__.py  async_safety.py  base.py  core_file_modification.py  dependency_security.py  enhanced_sql_injection.py  fail_open.py  import_completeness.py  l1_api.py  l1_behavior.py  l1_files.py  l1_import.py  l1_modules.py  l1_subsystems.py  l2_architecture.py  l2_schema.py  l3_correlation.py  l4_baseline.py  optimization.py  (+5 more)
moat_v1_upgrade_plan/: index.html
optimization_rules/: index.html
performance_test_report/: index.html
quickstart/: index.html
scripts/: install.sh  verify_install.py
search/: search_index.json
site/: 404.html  sitemap.xml
tests/: .coverage  coverage.json  critical_path_coverage.json  critical_path_coverage_report.json  test_ai_test_gate.py  test_ast.py  test_async_safety.py  test_checks.py  test_cli.py  test_cli_integration.py  test_contract.py  test_contract_integration.py  test_contract_system.py  test_core_areas.py  test_core_file_modification.py  test_dependency_security.py  test_diff_bugfix.py  test_discovery.py  test_dynamic_import.py  test_enhanced_sql_injection.py  test_environment_dependency.py  test_evolution.py  test_evolution_auto.py  test_evolution_cli.py  test_evolution_metrics.py  test_fixer.py  test_fixer_engine.py  test_go_checks.py  test_import_completeness.py  test_knowledge_graph.py  test_l0_l1_import.py  test_l1_api.py  test_l1_behavior.py  test_l1_files.py  test_l1_modules.py  test_l1_subsystems.py  test_l2_architecture.py  test_l2_schema.py  test_l3_correlation.py  test_l4_baseline.py  (+20 more)
usage/: index.html
v1.0_test_report/: index.html
v108_development_plan/: index.html
vscode-moat/: package.json
(+101 files in other folders)
