[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moat-ai"
version = "0.4.0"
description = "AI 编码护城河 — 第一个自我进化的 AI 编码守护者"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "One Team"},
]
requires-python = ">=3.10"
keywords = ["ai", "testing", "guardrails", "code-quality", "python", "self-evolving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.100", "uvicorn>=0.22"]
all = ["moat-ai[dashboard]"]

[project.urls]
Homepage = "https://github.com/wang-jie-git/moat"
Source = "https://github.com/wang-jie-git/moat"

[project.scripts]
moat = "moat.cli:main"

[tool.setuptools.packages.find]
include = ["moat*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.moat]
log_path = "logs/backend.log"
filter_pattern = "ERROR|Traceback"