[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moat-ai"
version = "0.7.0-beta.1"
description = "AI 编码护城河 — 多语言感知 + 深度记忆 + 智能进化"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "One Team"},
]
requires-python = ">=3.10"
keywords = ["ai", "testing", "guardrails", "code-quality", "python", "self-evolving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# Web 看板依赖
dashboard = ["fastapi>=0.100", "uvicorn>=0.22"]
# Sidecar 守护进程依赖（实时监控 + REST API）
sidecar = ["watchdog>=3.0", "fastapi>=0.100", "uvicorn>=0.22"]
# VS Code 插件辅助（剪贴板复制）
vscode = ["pyperclip>=1.8"]
# 全部功能
all = ["moat-ai[dashboard,sidecar,vscode]"]

[project.urls]
Homepage = "https://github.com/wang-jie-git/moat"
Source = "https://github.com/wang-jie-git/moat"

[project.scripts]
moat = "moat.cli:main"

[tool.setuptools.packages.find]
include = ["moat*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.moat]
log_path = "logs/backend.log"
filter_pattern = "ERROR|Traceback"