[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moat-ai"
version = "1.1.10"
description = "AI 编码守门员 — 零配置 + 实时拦截 + 处方化提示 + 精准拦截 + 性能飞跃 + 测试覆盖率优化 + Bug 修复"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "One Team"},
]
requires-python = ">=3.10"
keywords = ["ai", "testing", "guardrails", "code-quality", "python", "self-evolving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",  # Karpathy Principles YAML config
    "tree-sitter>=0.20.0",  # SQL 注入检测（守门员规则核心依赖）
]

[project.optional-dependencies]
# Web 看板依赖
dashboard = ["fastapi>=0.100", "uvicorn>=0.22"]
# Sidecar 守护进程依赖（实时监控 + REST API）
sidecar = ["watchdog>=3.0", "fastapi>=0.100", "uvicorn>=0.22"]
# VS Code 插件辅助（剪贴板复制）
vscode = ["pyperclip>=1.8"]
# PDF 报告导出
pdf = ["fpdf2>=2.7"]
# CI/CD 集成
ci = ["moat-ai[pdf]"]
# 开发环境（测试 + 构建）
dev = ["pytest>=7.0", "pytest-cov>=4.0", "build>=1.0", "twine>=4.0"]
# 全部功能
all = ["moat-ai[dashboard,sidecar,vscode,ci,dev]"]

[project.scripts]
moat = "moat.cli:main"

[project.urls]
Homepage = "https://github.com/wang-jie-git/moat"
Source = "https://github.com/wang-jie-git/moat"

[tool.setuptools.packages.find]
include = ["moat*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
moat = ["rules/*.yaml", "rules/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.moat]
log_path = "logs/backend.log"
filter_pattern = "ERROR|Traceback"